force-app/main/default/objects/Companies_House_Config__c/Companies_House_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Companies House Config</label>
</CustomObject>