force-app/main/default/objects/Companies_House_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>UK Companies House developer API key (register at developer.company-information.service.gov.uk). Sent via HTTP Basic Auth as the username with empty password.</description>
    <label>API Key</label>
    <length>128</length>
    <type>Text</type>
</CustomField>