force-app/main/default/objects/Companies_House_Config__c/fields/Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Daily_Limit__c</fullName>
    <defaultValue>7000</defaultValue>
    <description>Soft daily cap. Companies House limits to 600 requests per 5 minutes; 7,000/day is a safe daily envelope.</description>
    <label>Daily Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>