force-app/main/default/objects/Companies_House_Config__c/fields/Requests_Today__c.field-meta.xml
<CustomField>
    <fullName>Requests_Today__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Requests Today</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>